# hipopy

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  clas12.pyx  compare.py  hipopy.pyx  hipopy4.pyx  readme.md  setup.py  test.py  test_event.py
docker/: Dockerfile.py2  Dockerfile.py3
examples/: Untitled.ipynb  WvsQ2.ipynb  compare.py  deltaT.ipynb  inclusive.py  inclusive_mc.py  p_vs_b.py  test.py  test_clas12.py  test_event.py  test_hipo4.py
src/clas12tool/: CMakeLists.txt  clas12tool.pc.in
src/clas12tool/include/clas12/: clas12event.h  detector.h  header.h  particle.h  vectors.h
src/clas12tool/src/: clas12event.cpp  detector.cpp  header.cpp  particle.cpp  vectors.cpp
src/hipocpp/: CMakeLists.txt  hipocpp.pc.in
src/hipocpp/include/hipo/: bank.h  data.h  dictionary.h  event.h  node.h  reader.h  record.h  text.h  utils.h  writer.h
src/hipocpp/src/: bank.cpp  data.cpp  dictionary.cpp  event.cpp  node.cpp  reader.cpp  record.cpp  text.cpp  utils.cpp  wrapper.cpp  writer.cpp
src/hipocpp3/: CMakeLists.txt  hipocpp.pc.in
src/hipocpp3/src/: record.cpp
src/hipocpp4/: CMakeLists.txt
src/hipocpp4/include/hipo4/: reader.h  record.h  utils.h
src/hipocpp4/src/: reader.cpp  record.cpp  utils.cpp
